[gd_scene load_steps=9 format=3 uid="uid://dxycqt2mh808w"]

[ext_resource type="Texture2D" uid="uid://djstkmhodif00" path="res://assets/RicYFed/fondopergamino.png" id="1_5p55f"]
[ext_resource type="Script" uid="uid://c341l4dcir1pa" path="res://scripts/control.gd" id="1_brbbq"]
[ext_resource type="FontFile" uid="uid://difhyng5scqnp" path="res://assets/RicYFed/fuentes/alagard/alagard.ttf" id="2_r67kn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r67kn"]
texture = ExtResource("1_5p55f")
modulate_color = Color(0.7708395, 0.77083945, 0.77083945, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cr3o2"]
bg_color = Color(0.11097006, 0.00016824104, 0.27674302, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r67kn"]
bg_color = Color(0.05882353, 0, 0.1764706, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_brbbq"]
bg_color = Color(0.060485885, 7.0505535e-05, 0.17581844, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r67kn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_brbbq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_r67kn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.9375
offset_top = -100.5
offset_right = 143.9375
offset_bottom = 100.5
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_cr3o2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r67kn")
theme_override_styles/hover = SubResource("StyleBoxFlat_brbbq")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_cr3o2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_r67kn")
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_cr3o2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r67kn")
theme_override_styles/hover = SubResource("StyleBoxFlat_brbbq")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_cr3o2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_r67kn")
text = "Options
"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_cr3o2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r67kn")
theme_override_styles/hover = SubResource("StyleBoxFlat_brbbq")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_cr3o2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_r67kn")
text = "Exit
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.5
offset_top = -191.0
offset_right = 212.5
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_r67kn")
theme_override_font_sizes/font_size = 45
text = "Ricardo Y Federico"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_pressed"]
